--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "repository": "git@github.com:TheDayC/ecommerce-microservice.git",
   "author": "TheDayC <daveconnolly90@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc",
+    "dev": "ts-node ./src/app.ts",
+    "start": "node ./build/app.js"
+  },
   "devDependencies": {
     "@types/node": "^14.14.7",
     "ts-node": "^9.0.0",
