--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "start": "node ./build/app.js"
   },
   "devDependencies": {
+    "@types/express": "^4.17.9",
     "@types/node": "^14.14.7",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
