--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "@types/memory-cache": "^0.2.1",
     "@types/node": "^14.14.7",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.5"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "memory-cache": "^0.2.0"
   }
 }
